--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>simgame</title><link href=static/css/app.bdaf35eda10375d43dacf59333764f0b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.37a2ecbb1d1b7e6c9ada.js></script><script type=text/javascript src=static/js/vendor.964c6890fffca7b764fa.js></script><script type=text/javascript src=static/js/app.7cec6efcba00d2f3cf70.js></script></body></html>
+<!DOCTYPE html><html><head>
+<meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@PennantSpirits" />
+<meta property="og:url" content="https://nannj.github.io/simgame/#/">
+<meta property="og:title" content="打線シミュレーターLite">
+<meta property="og:description" content="歴代の選手の成績を使って自由に打線をシミュレーション出来るwebアプリです。">
+<meta property="og:image" content="https://nannj.github.io/simgame/order.png">
+<title>simgame</title><link href=static/css/app.938c158fdcc48ba5023d3ca91a5f899d.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.37a2ecbb1d1b7e6c9ada.js></script><script type=text/javascript src=static/js/vendor.310c12236438c89f83f9.js></script><script type=text/javascript src=static/js/app.7f8929d751fff46a46ae.js></script></body></html>
