サムネイル修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@PennantSpirits" />
-<meta property="og:url" content="https://nannj.github.io/simgame/#/">
+<meta property="og:url" content="https://nannj.github.io/simgamel/#/">
 <meta property="og:title" content="打線シミュレーターLite">
 <meta property="og:description" content="歴代の選手の成績を使って自由に打線をシミュレーション出来るwebアプリです。">
 <meta property="og:image" content="https://nannj.github.io/simgame/order.png">
